# ragcore

./: CHANGELOG.md  README.md  pyproject.toml
pyragcore/: __init__.py  config.py
pyragcore/embeddings/: sentencetransformerembedder.py
pyragcore/llm/: ollama_llm.py
pyragcore/pipeline/: base_pipeline.py
pyragcore/retrieval/: retriver.py
pyragcore/utils_io/: logger.py  voice.py
ragcore/pipeline/: base_pipeline.py
