[project]
name = "pyragcore"
version = "0.1.6"
description = "A reusable RAG core library built on FAISS and Ollama"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Vlad Digori", email = "digorivlad59@gmail.com" }
]
keywords = ["rag", "llm", "faiss", "ollama", "ai", "embeddings"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "faiss-cpu>=1.13.2",
    "tqdm>=4.67.3",
    "langchain-text-splitters>=0.3.8",
    "tiktoken>=0.9.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=5.3.0"]
ollama = ["langchain-ollama>=1.0.1", "langchain-core>=1.2.22"]
voice = ["speechrecognition>=3.15.1", "gTTS>=2.5.4", "sounddevice>=0.5.5", "pyttsx3>=2.99"]
all = ["pyragcore[embeddings,ollama,voice]"]

[dependency-groups]
dev = [
    "build>=1.4.4",
    "twine>=6.2.0",
]
